--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <table cellspacing="20">
     <tr>
-      <td><img src="Images/Screenshot 2022-09-02 135420-modified.png" alt="Siddhesh kabra's profile picture" height="200 px"
+      <td><img src="Screenshot 2022-09-02 135420-modified.png" alt="Siddhesh kabra's profile picture" height="200 px"
           width="200 px" /></td>
       <td <h1>Siddhesh Kabra</h1>
 
