--- a/hobbies.html
+++ b/hobbies.html
@@ -10,7 +10,7 @@
     <h3>My Hobbies</h3>
 
     <ol type="A" >
-      <li>Playing <a href="https://en.wikipedia.org/wiki/Cricket" target="_blank">Crcicket</a> </li>
+      <li>Playing <a href="https://en.wikipedia.org/wiki/Cricket" target="_blank">Cricket</a> </li>
       <li><a href="https://www.youtube.com/watch?v=KQmSn9_00nI&t=22s" target="_blank">  Reading Books </a></li>
       <li><a href="https://www.youtube.com/watch?v=eKqY-oP1d_Y&t=18s" target="_blank">  Learn to Code </a></li>
     </ol>
